Add very basic plotting functionality using OxyPlot

--- a/CS_GUI/MainWindow.xaml
+++ b/CS_GUI/MainWindow.xaml
@@ -104,6 +104,10 @@
                 VerticalAlignment="Top"
                 Click="ClearHistoryButton_Click"/>
 
+        <local:PlottingArea x:Name="PlotArea"
+                    Margin="41,146,359,38"/>
+
+
 
     </Grid>
 </Window>
