--- a/CS_GUI/MainWindow.xaml
+++ b/CS_GUI/MainWindow.xaml
@@ -41,7 +41,7 @@
                  TextWrapping="Wrap"
                  Text=""
                  VerticalAlignment="Top"
-                 Width="400"
+                 Width="300"
                  TextChanged="TextBox_TextChanged"
                  IsReadOnly="True"
                  Foreground="Red" />
@@ -59,6 +59,14 @@
             Margin="349,100,0,0"
             VerticalAlignment="Top"
             Click="buttonPlot_Click" Width="52"/>
+        <Button x:Name="buttonParseTree"
+            Content="Parse Tree"
+            HorizontalAlignment="Left"
+            Margin="349,119,0,0"
+            VerticalAlignment="Top"
+            Width="100"
+            Click="buttonParseTree_Click"
+            />
 
         <Label Content="Input:"
                HorizontalAlignment="Left"
@@ -87,6 +95,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <ListBox x:Name="HistoryBox"
@@ -119,6 +128,17 @@
             Margin="0,8,0,0"
             Width="60"
             Click="ClearHistoryButton_Click"/>
+
+            <TextBox x:Name="parseTreeBox"
+                Grid.Row="2"
+                Margin="0,10,0,0"
+                Text=""
+                IsReadOnly="True"
+                AcceptsReturn="True"
+                VerticalScrollBarVisibility="Auto"
+                HorizontalScrollBarVisibility="Auto"
+                FontFamily="Consolas"
+                TextWrapping="NoWrap" />
         </Grid>
 
 
