--- a/CS_GUI/PlottingArea.xaml
+++ b/CS_GUI/PlottingArea.xaml
@@ -1,14 +1,14 @@
 ﻿<UserControl x:Class="CS_GUI.PlottingArea"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CS_GUI"
              xmlns:oxy="http://oxyplot.org/wpf"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Stretch">
+
     <Grid>
         <oxy:PlotView x:Name="PlotViewControl"
-                          Margin="10"/>
+                      Model="{Binding}"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
