--- a/CS_GUI/MainWindow.xaml
+++ b/CS_GUI/MainWindow.xaml
@@ -42,6 +42,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
                 <!-- Input -->
@@ -154,6 +155,75 @@
                         </ComboBox>
                     </StackPanel>
                 </StackPanel>
+                <!-- Advanced Maths (change at will) -->
+                <GroupBox Grid.Row="5"
+                          Header="Advanced Maths"
+                          Margin="0,8,0,0">
+                    <StackPanel>
+
+                        <!-- Derivative -->
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,4">
+                            <TextBlock Text="Derivative at x₀:"
+                                       VerticalAlignment="Center"
+                                       Margin="0,0,5,0"/>
+                            <xctk:DoubleUpDown x:Name="DerivativeX0UpDown"
+                                               Width="80"
+                                               Height="24"
+                                               Increment="0.1"
+                                               Value="0" />
+                            <Button x:Name="buttonDerivative"
+                                    Content="Compute"
+                                    Margin="10,0,0,0"
+                                    Click="buttonDerivative_Click"/>
+                        </StackPanel>
+
+                        <!-- Root finding -->
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,4">
+                            <TextBlock Text="Root [a, b]:"
+                                       VerticalAlignment="Center"
+                                       Margin="0,0,5,0"/>
+                            <xctk:DoubleUpDown x:Name="RootAUpDown"
+                                               Width="70"
+                                               Height="24"
+                                               Increment="0.1"
+                                               Value="-10" />
+                            <xctk:DoubleUpDown x:Name="RootBUpDown"
+                                               Width="70"
+                                               Height="24"
+                                               Increment="0.1"
+                                               Margin="5,0,0,0"
+                                               Value="10" />
+                            <Button x:Name="buttonRoot"
+                                    Content="Find Root"
+                                    Margin="10,0,0,0"
+                                    Click="buttonRoot_Click"/>
+                        </StackPanel>
+
+                        <!-- Integration -->
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Integral [a, b]:"
+                                       VerticalAlignment="Center"
+                                       Margin="0,0,5,0"/>
+                            <xctk:DoubleUpDown x:Name="IntegralAUpDown"
+                                               Width="70"
+                                               Height="24"
+                                               Increment="0.1"
+                                               Value="0" />
+                            <xctk:DoubleUpDown x:Name="IntegralBUpDown"
+                                               Width="70"
+                                               Height="24"
+                                               Increment="0.1"
+                                               Margin="5,0,0,0"
+                                               Value="1" />
+                            <Button x:Name="buttonIntegrate"
+                                    Content="Integrate"
+                                    Margin="10,0,0,0"
+                                    Click="buttonIntegrate_Click"/>
+                        </StackPanel>
+
+                    </StackPanel>
+                </GroupBox>
+
             </Grid>
 
             <!-- Right Column -->
